# Peoples-Advisor

./: .gitignore  LICENSE  Makefile  README.md  pylama.ini  pyproject.toml  sandbox.py  sandbox_two.py
pa/: TODO.txt  peoples_advisor.py  settings.py  setup.py
pa/api/: api.py  oanda.py  oanda_api.py  oanda_guide.txt  unofficial_oanda_api.py
pa/api/oanda_endpoints/: account.py  instrument.py  order.py  position.py  trade.py  transaction.py
pa/backtest/: backtest.py  common.py  oanda_backtest.py
pa/cli/: cli.py
pa/common/: common.py
pa/control/: control.py
pa/event/: event.py
pa/portfolio/: portfolio.py
pa/price/: oanda_price.py  price.py
pa/signal/: signal.py
pa/sizing/: sizing.py
pa/strategy/: example_strategy.py
peoples_advisor/: main.py  requirements.txt  setup.py
peoples_advisor/api/: api.py
peoples_advisor/api/oanda/: oanda_api.py  unofficial_oanda_api.py
peoples_advisor/backtest/: backtest.py  oanda_backtest.py
peoples_advisor/backtest/common/: common.py
peoples_advisor/backtest/oanda/: oanda_backtest.py
peoples_advisor/cli/: cli.py
peoples_advisor/common/: common.py
peoples_advisor/control/: control.py
peoples_advisor/event/: event.py
peoples_advisor/order/common/: common.py
peoples_advisor/portfolio/: portfolio.py
peoples_advisor/price/: common.py  oanda_price.py  price.py
peoples_advisor/price/common/: common.py
peoples_advisor/price/oanda/: oanda_price.py
peoples_advisor/signal/: signal.py
peoples_advisor/sizing/: sizing.py
peoples_advisor/strategy/: example_strategy.py
tests/api/: test_oanda.py
(+2 files in other folders)
