[tool.poetry]
name = "peoples_advisor"
version = "0.1.dev"
description = ""
authors = ["Will Humphlett <will@humphlett.net>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
prompt-toolkit = "^3.0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"
pylint = "^2.8.3"
pytest-cov = "^2.12.1"
black = "^21.5b2"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
